fixed labels && Fucking Console Errors

--- a/client/src/app/change-language/change-language.page.html
+++ b/client/src/app/change-language/change-language.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'select_language' | translate}}
+            {{'Language' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
