--- a/client/src/app/chats/chats.page.html
+++ b/client/src/app/chats/chats.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>{{ 'chat' | translate }}</ion-title>
+        <ion-title>{{ 'Chat' | translate }}</ion-title>
         <ion-buttons slot="end">
             <ion-button (click)="openSearchUser()">
                 <ion-icon name="search-outline"></ion-icon>
