--- a/client/src/app/forgot-password/forgot-password.page.html
+++ b/client/src/app/forgot-password/forgot-password.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'forgot_password' | translate}}
+            {{'Forgot password' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -15,21 +15,21 @@
             <img src="assets/images/banner_img.png" class="crop_img">
         </div>
         <div class="text_box animate__animated animate__fadeInUp">
-            <h2 class="">{{'it_will_take_less_then_a_minutes' | translate}}.</h2>
-            <p class="">{{'forgot_password_text' | translate}}</p>
+            <h2 class="">{{'It takes less than a minute' | translate}}.</h2>
+            <p class="">{{'Reset your password' | translate}}</p>
         </div>
     </div>
 
     <div class="form">
         <ion-list>
             <ion-item class="animate__animated animate__fadeInUp">
-                <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'email' | translate" mode="md"
+                <ion-input [(ngModel)]="email" labelPlacement="floating" [label]="'Email' | translate" mode="md"
                     type="email"></ion-input>
             </ion-item>
         </ion-list>
 
         <ion-button size="large" expand="round" class="btn animate__animated animate__fadeInUp"
-            (click)="submit()">{{'submit' | translate}}
+            (click)="submit()">{{'Submit' | translate}}
         </ion-button>
     </div>
 </ion-content>
