--- a/client/src/app/get-pro/get-pro.page.html
+++ b/client/src/app/get-pro/get-pro.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'get_pro' | translate}}
+            {{'Get PRO' | translate}}
         </ion-title>
     </ion-toolbar>
     <div class="banner">
@@ -51,6 +51,6 @@
 
 <ion-footer class="ion-no-border animate__animated animate__fadeInUp">
     <ion-button size="large" expand="round" class="btn">
-        {{'get_pro' | translate}}
+        {{'Buy now' | translate}}
     </ion-button>
 </ion-footer>
