--- a/client/src/app/measurements/measurements.component.html
+++ b/client/src/app/measurements/measurements.component.html
@@ -4,13 +4,13 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'measurements' | translate}}
+            {{'Measurements' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content class="bg_color ion-padding-x" fullscreen>
-    <p class="ion-padding-bottom"> {{ 'weight_measurements' | translate }}</p>
+    <p class="ion-padding-bottom"> {{ 'Weight' | translate }}</p>
     <ion-segment [value]="selectedWeightType" (ionChange)="setWeightType($event.detail.value)">
         @for(weightType of weightTypes; track $index) {
         <ion-segment-button [value]="weightType">
