--- a/client/src/app/qr-code-modal/qr-code-modal.component.html
+++ b/client/src/app/qr-code-modal/qr-code-modal.component.html
@@ -5,7 +5,7 @@
                 <ion-icon name="close-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title>{{'connect' | translate}}</ion-title>
+        <ion-title>{{'Connect' | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -15,7 +15,7 @@
             <!-- TODO: Trainer -->
             <img src="" alt="QR Code">
         </div>
-        <p class="qr-description">{{'scan_to_connect' | translate}}</p>
+        <p class="qr-description">{{'Scan to connect' | translate}}</p>
     </div>
 
 
@@ -28,16 +28,16 @@
             <div class="button-group ion-margin-bottom">
                 <ion-button size="medium" expand="block" fill="outline" color="primary">
                     <ion-icon slot="start" name="copy-outline"></ion-icon>
-                    {{'copy' | translate}}
+                    {{'Copy' | translate}}
                 </ion-button>
                 <ion-button size="medium" expand="block" fill="outline" color="primary">
                     <ion-icon slot="start" name="share-social-outline"></ion-icon>
-                    {{ 'share' | translate }}
+                    {{ 'Share' | translate }}
                 </ion-button>
             </div>
             <div>
                 <ion-button expand="round" color="primary" class="btn" (click)="dismissModal()">
-                    {{ 'complete' | translate}}
+                    {{ 'Complete' | translate}}
                 </ion-button>
             </div>
         </div>
