--- a/client/src/app/rest/rest.page.html
+++ b/client/src/app/rest/rest.page.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="page_title ion-text-center">
-        <h2>{{'take_a_rest' | translate}}</h2>
-        <h3>{{'you_going_grate' | translate}} !!</h3>
+        <h2>{{'Take a rest' | translate}}</h2>
+        <h3>{{'You are doing great!' | translate}} !!</h3>
     </div>
     <div class="timer">
         <circle-progress [maxPercent]="100" [percent]="65" [showTitle]="false" [showUnits]="false"
@@ -34,11 +34,11 @@
     </div>
 
     <ion-button size="large" expand="round" fill="outline" class="btn">
-        {{'skip' | translate}}
+        {{'Skip' | translate}}
     </ion-button>
 
     <div class="card_footer ion-text-center">
-        <h2> {{'next' | translate}}</h2>
+        <h2> {{'Next' | translate}}</h2>
         <h3>Full Crunches</h3>
         <h4> 5 mins | 2 set | 25 reps</h4>
     </div>
