--- a/client/src/app/settings/account-switch-popover/account-switch-popover.component.html
+++ b/client/src/app/settings/account-switch-popover/account-switch-popover.component.html
@@ -11,10 +11,10 @@
     }
     <ion-item button (click)="addNewAccount()">
         <ion-icon slot="start"></ion-icon>
-        <ion-label>{{ 'add_new_account' | translate }}</ion-label>
+        <ion-label>{{ 'Add new account' | translate }}</ion-label>
     </ion-item>
     <ion-item button (click)="dismiss()">
         <ion-icon name="close" slot="start"></ion-icon>
-        <ion-label>{{ 'cancel' | translate }}</ion-label>
+        <ion-label>{{ 'Cancel' | translate }}</ion-label>
     </ion-item>
 </ion-list>
