--- a/client/src/app/shared/rest-badge/rest-badge.component.html
+++ b/client/src/app/shared/rest-badge/rest-badge.component.html
@@ -1,5 +1,5 @@
 <ion-button size="large" expand="round" shape="round" color="primary" (click)="skipRest()"
     [style.display]="!isResting ? 'none' : ''">
     <ion-icon slot="start" name="timer-outline"></ion-icon>
-    {{'skip' | translate}} ({{ restTimeRemaining | duration }})
+    {{'Skip' | translate}} ({{ restTimeRemaining | duration }})
 </ion-button>
