--- a/client/src/app/stretch-workouts/stretch-workouts.page.html
+++ b/client/src/app/stretch-workouts/stretch-workouts.page.html
@@ -22,12 +22,12 @@
         <ion-segment mode="ios" [(ngModel)]="tab" lines="none">
             <ion-segment-button mode="ios" value="workouts">
                 <ion-label>
-                    {{'workouts' | translate}}
+                    {{'Workouts' | translate}}
                 </ion-label>
             </ion-segment-button>
             <ion-segment-button mode="ios" value="trainer">
                 <ion-label>
-                    {{'trainer' | translate}}
+                    {{'Trainer' | translate}}
                 </ion-label>
             </ion-segment-button>
         </ion-segment>
