--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -2,22 +2,22 @@
     <ion-tab-bar slot="bottom">
         <ion-tab-button tab="home">
             <ion-icon class="zmdi zmdi-male"></ion-icon>
-            <ion-label>{{'workouts' | translate}}</ion-label>
+            <ion-label>{{'Workouts' | translate}}</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="my_activity">
             <ion-icon class="zmdi zmdi-equalizer"></ion-icon>
-            <ion-label>{{'activity' | translate}}</ion-label>
+            <ion-label>{{'Activity' | translate}}</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="chats">
             <ion-icon class="zmdi zmdi-comments"></ion-icon>
-            <ion-label>{{'chat' | translate}}</ion-label>
+            <ion-label>{{'Chat' | translate}}</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="settings">
             <ion-icon class="zmdi zmdi-settings"></ion-icon>
-            <ion-label>{{'settings' | translate}}</ion-label>
+            <ion-label>{{'Settings' | translate}}</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
