--- a/client/src/app/weight-programs/weight-programs.page.html
+++ b/client/src/app/weight-programs/weight-programs.page.html
@@ -17,17 +17,17 @@
     <ion-segment mode="ios" [(ngModel)]="tab" lines="none">
         <ion-segment-button mode="ios" value="beginers">
             <ion-label>
-                {{'beginers' | translate}}
+                {{'Beginers' | translate}}
             </ion-label>
         </ion-segment-button>
         <ion-segment-button mode="ios" value="skills">
             <ion-label>
-                {{'skills' | translate}}
+                {{'Skills' | translate}}
             </ion-label>
         </ion-segment-button>
         <ion-segment-button mode="ios" value="master">
             <ion-label>
-                {{'master' | translate}}
+                {{'Master' | translate}}
             </ion-label>
         </ion-segment-button>
     </ion-segment>
