--- a/client/src/app/workout-start/workout-start.page.html
+++ b/client/src/app/workout-start/workout-start.page.html
@@ -36,11 +36,11 @@
     </div>
 
     <ion-button size="large" expand="round" class="btn">
-        {{'stop' | translate}}
+        {{'Stop' | translate}}
     </ion-button>
 
     <div class="card_footer ion-text-center">
-        <h2 (click)="rest()"> {{'next' | translate}}</h2>
+        <h2 (click)="rest()"> {{'Next' | translate}}</h2>
         <h3>Full Crunches</h3>
         <h4> 5 mins | 2 set | 25 reps</h4>
     </div>
