--- a/client/src/app/assign-modal/assign-modal.component.html
+++ b/client/src/app/assign-modal/assign-modal.component.html
@@ -1,9 +1,9 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>{{ 'assign' | translate }} @if (title) { "{{ title }}" }</ion-title>
+        <ion-title>{{ 'Assign' | translate }} @if (title) { "{{ title }}" }</ion-title>
         <ion-buttons slot="end">
-            <ion-button (click)="dismiss()">{{'cancel' | translate }}</ion-button>
-            <ion-button (click)="assignToSelected()" [strong]="true" color="primary">{{'assign' | translate
+            <ion-button (click)="dismiss()">{{'Cancel' | translate }}</ion-button>
+            <ion-button (click)="assignToSelected()" [strong]="true" color="primary">{{'Assign' | translate
                 }}</ion-button>
         </ion-buttons>
     </ion-toolbar>
