--- a/client/src/app/help/help.page.html
+++ b/client/src/app/help/help.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'help' | translate}}
+            {{'Help' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
