--- a/client/src/app/my-trainers/my-trainers.page.html
+++ b/client/src/app/my-trainers/my-trainers.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'my_trainers' | translate}}
+            {{'My trainers' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
