--- a/client/src/app/register/register.page.html
+++ b/client/src/app/register/register.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'register' | translate}}
+            {{'Register' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
@@ -15,7 +15,7 @@
             <div class="banner_img center_img">
                 <img src="assets/images/banner_img.png" class="crop_img">
                 <div class="logo animate__animated animate__fadeInUp">
-                    <h1>{{ 'welcome' | translate }}!</h1>
+                    <h1>{{ 'Welcome' | translate }}!</h1>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
                     <ion-icon [color]="group.value == userTypes.User ? 'primary' : ''" slot="end"
                         name="person-outline"></ion-icon>
                     <ion-radio labelPlacement="end" slot="start" [value]="userTypes.User">
-                        <h5>{{ 'user' | translate }}</h5>
+                        <h5>{{ 'User' | translate }}</h5>
                         <p> {{ 'register_user_description' | translate }}</p>
                     </ion-radio>
                 </ion-item>
@@ -34,7 +34,7 @@
                     <ion-icon [color]="group.value == userTypes.Trainer ? 'primary' : ''" slot="end"
                         name="barbell-outline"></ion-icon>
                     <ion-radio labelPlacement="end" slot="start" [value]="userTypes.Trainer">
-                        <h5>{{ 'trainer' | translate }}</h5>
+                        <h5>{{ 'Trainer' | translate }}</h5>
                         <p> {{ 'register_trainer_description' | translate }}</p>
                     </ion-radio>
                 </ion-item>
@@ -46,7 +46,7 @@
                         <div class="segment-button-content">
                             <ion-icon name="person-outline"></ion-icon>
                             <div class="segment-text">
-                                <span>{{ 'user' | translate }}</span>
+                                <span>{{ 'User' | translate }}</span>
                             </div>
                         </div>
                     </ion-segment-button>
@@ -55,7 +55,7 @@
                         <div class="segment-button-content">
                             <ion-icon name="barbell-outline"></ion-icon>
                             <div class="segment-text">
-                                <span>{{ 'trainer' | translate }}</span>
+                                <span>{{ 'Trainer' | translate }}</span>
                             </div>
                         </div>
                     </ion-segment-button>
@@ -65,11 +65,11 @@
 
                     @if (registrationForm.get('type').value === userTypes.Trainer) {
                     <p>
-                        {{ 'register_trainer_description' | translate }}
+                        {{ 'Register as trainer to find your next potential client.' | translate }}
                     </p>
                     } @else {
                     <p>
-                        {{ 'register_user_description' | translate }}
+                        {{ 'Register as user to find your next trainer.' | translate }}
                     </p>
                     }
 
@@ -79,19 +79,19 @@
 
             <ion-list>
                 <ion-item class="animate__animated animate__fadeInUp">
-                    <ion-input formControlName="name" labelPlacement="floating" [label]="'name' | translate" mode="md"
+                    <ion-input formControlName="name" labelPlacement="floating" [label]="'Name' | translate" mode="md"
                         type="text">
                     </ion-input>
                 </ion-item>
 
                 <ion-item class="animate__animated animate__fadeInUp">
-                    <ion-input formControlName="email" labelPlacement="floating" [label]="'email' | translate" mode="md"
+                    <ion-input formControlName="email" labelPlacement="floating" [label]="'Email' | translate" mode="md"
                         type="email">
                     </ion-input>
                 </ion-item>
 
                 <ion-item class="animate__animated animate__fadeInUp">
-                    <ion-input formControlName="password" labelPlacement="floating" [label]="'password' | translate"
+                    <ion-input formControlName="password" labelPlacement="floating" [label]="'Password' | translate"
                         class="password" mode="md" type="password">
                     </ion-input>
                 </ion-item>
@@ -101,6 +101,6 @@
 </ion-content>
 
 <ion-footer class="ion-no-border animate__animated animate__fadeInUp">
-    <ion-button size="large" expand="round" class="btn" (click)="register()">{{'register' |
+    <ion-button size="large" expand="round" class="btn" (click)="register()">{{'Register' |
         translate}}</ion-button>
 </ion-footer>
