--- a/client/src/app/settings/settings.page.html
+++ b/client/src/app/settings/settings.page.html
@@ -1,6 +1,6 @@
 <ion-header class="bg_transparent">
     <ion-toolbar [class.show-background]="showToolbar">
-        <ion-title>{{'settings' | translate}}</ion-title>
+        <ion-title>{{'Settings' | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -9,7 +9,7 @@
 
     <div class="buy_this_app end" (click)="buyappalert()" *ngIf="config.demoMode">
         <h2>
-            {{"buy_this_app" | translate}}
+            {{"Buy or donate" | translate}}
         </h2>
     </div>
 
@@ -24,7 +24,7 @@
             </div>
             <div class="text_box ion-margin-start">
                 <h2>{{ user?.name || '-'}}</h2>
-                <h3>{{'view_profile' | translate}}</h3>
+                <h3>{{'View profile' | translate}}</h3>
             </div>
         </div>
         <ion-button fill="clear" (click)="openAccountSwitchOptions()">
@@ -44,7 +44,7 @@
                     slot="icon-only"></ion-icon>
                 <div class="text_box">
                     <h2>{{ (isDark() ? 'light' : 'dark' ) | translate}}</h2>
-                    <h3>{{'change_theme' | translate}}</h3>
+                    <h3>{{'Theme' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -53,8 +53,8 @@
             <div class="item-inner d-flex">
                 <ion-icon [size]="'medium'" class="zmdi zmdi-ruler" slot="icon-only"></ion-icon>
                 <div class="text_box">
-                    <h2>{{ 'measurements' | translate}}</h2>
-                    <h3>{{'select_default_measurements' | translate}}</h3>
+                    <h2>{{ 'Measurements' | translate}}</h2>
+                    <h3>{{'Select default measurements' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -63,8 +63,8 @@
             <div class="item-inner d-flex">
                 <ion-icon [size]="'medium'" class="zmdi zmdi-lock-outline" slot="icon-only"></ion-icon>
                 <div class="text_box">
-                    <h2>{{ 'account' | translate}}</h2>
-                    <h3>{{'account_settings' | translate}}</h3>
+                    <h2>{{ 'Account' | translate}}</h2>
+                    <h3>{{'Settings' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -73,8 +73,8 @@
             <div class="item-inner d-flex">
                 <ion-icon class="zmdi zmdi-globe ion-text-start"></ion-icon>
                 <div class="text_box">
-                    <h2>{{'change_language' | translate}}</h2>
-                    <h3>{{'select_your_language' | translate}}</h3>
+                    <h2>{{'Language' | translate}}</h2>
+                    <h3>{{'Select language' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -83,8 +83,8 @@
             <div class="item-inner d-flex">
                 <ion-icon class="zmdi zmdi-help ion-text-start"></ion-icon>
                 <div class="text_box">
-                    <h2>{{'need_help' | translate}}?</h2>
-                    <h3>{{'faq_to_help_with_your_queries' | translate}}</h3>
+                    <h2>{{'Need help?' | translate}}?</h2>
+                    <h3>{{'Chat with us' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -93,8 +93,8 @@
             <div class="item-inner d-flex">
                 <ion-icon class="zmdi zmdi-assignment ion-text-start"></ion-icon>
                 <div class="text_box">
-                    <h2>{{'terms_conditions' | translate}}?</h2>
-                    <h3>{{'our_terms_conditions' | translate}}</h3>
+                    <h2>{{'Terms & Conditions' | translate}}?</h2>
+                    <h3>{{'Click here to check terms and conditions.' | translate}}</h3>
                 </div>
             </div>
         </ion-item>
@@ -103,7 +103,7 @@
 
 <ion-footer class="ion-no-border" style="bottom: 43px; background: var(--bg-color);">
     <div class="developed_by d-flex" (click)="developed_by()" *ngIf="config.demoMode">
-        <h2>{{"developed_by" | translate}}</h2>
+        <h2>{{"Developed by" | translate}}</h2>
         <div class="img_box end">
             <img src="assets/images/opus_logo_light.png">
         </div>
