--- a/client/src/app/template/template.component.html
+++ b/client/src/app/template/template.component.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{ 'template' | translate }}
+            {{ 'Template' | translate }}
         </ion-title>
         <ion-label slot="end">
             @if (templateForm.controls.id.value) {
@@ -21,7 +21,7 @@
         <div class="form">
             <ion-list>
                 <ion-item>
-                    <ion-input label="{{ 'name' | translate }}" labelPlacement="floating" formControlName="name"
+                    <ion-input label="{{ 'Name' | translate }}" labelPlacement="floating" formControlName="name"
                         type="text"></ion-input>
                 </ion-item>
             </ion-list>
@@ -36,12 +36,12 @@
                     }
                     @empty {
                     <ion-label class="ion-text-center ion-padding" [color]="'medium'">
-                        {{ 'no_exercise_added' | translate }}
+                        {{ 'No exercises added yet.' | translate }}
                     </ion-label>
                     }
 
                     <ion-button fill="clear" expand="block" (click)="addExercises()">
-                        {{ 'add_exercise' | translate }}
+                        {{ 'Add exercise' | translate }}
                     </ion-button>
                 </ion-label>
             </ion-item>
