--- a/client/src/app/terms-condition/terms-condition.page.html
+++ b/client/src/app/terms-condition/terms-condition.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
         </ion-buttons>
         <ion-title>
-            {{'terms_conditions' | translate}}
+            {{'Terms & Conditions' | translate}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
